Fixes overflow problem

--- a/shop/style.css
+++ b/shop/style.css
@@ -2,9 +2,11 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: sans-serif;
+	font-family: sans-serif;	
 }
-
+body {
+	overflow-x: hidden;
+}
 header {
 	background: black;
 	color:  white;
@@ -94,7 +96,7 @@ h3 {
 	display: block;
 	position: relative;
 	left:  900px;
-	animation: scrollLeft 15s ease-out 2s infinite;
+	animation: scrollLeft 15s ease-in 2s infinite;
 }
 @keyframes scrollLeft {
 	0% {left: 900px}
